# arap

./: CMakeLists.txt  README.md  arap.cpp  arap.hpp  main.cpp
data/Meshes_ARAP_SA2007/: cactus2.off
